@@ -72,3 +72,14 @@ INSERT INTO `spell_proc_event` (`entry`,`SchoolMask`,`SpellFamilyName`,`SpellFam
 -- Fix Blackheart the Inciter (http://old.wowhead.com/npc=18667)
 INSERT INTO `main_world_trinity`.`disables` (`sourceType`, `entry`, `flags`, `params_0`, `params_1`, `comment`) VALUES
 ('0', '33676', '7', '', '', 'Blackheart the Inciter - Incite Chaos'), ('0', '33684', '7', '', '', 'Blackheart the Inciter - Incite Chaos b');
+
+-- Fix Druid - Lifebloom's
+DELETE FROM spell_bonus_data WHERE entry = 33778;
+DELETE FROM spell_bonus_data WHERE entry = 33763;
+DELETE FROM spell_bonus_data WHERE entry = 48450;
+DELETE FROM spell_bonus_data WHERE entry = 48451;
+INSERT INTO spell_bonus_data (entry, direct_bonus, dot_bonus, ap_bonus, ap_dot_bonus, comment) VALUES
+(33778, 0, 0, 0, 0, 'Druid - Lifebloom's'),
+(33763, 0.516, 0.0952, 0, 0, 'Druid - Lifebloom Rank 1'),
+(48450, 0.516, 0.0952, 0, 0, 'Druid - Lifebloom Rank 2'), 
+(48451, 0.516, 0.0952, 0, 0, 'Druid - Lifebloom Rank 3');
